Added meta tags

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/coice.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COICE - exploring percusive sounds</title>
+    <title>COICE - Exploring percussive sounds</title>
+    <meta
+      name="description"
+      content="Focada em sons percussivos, valorizando a sonoridade da América Latina e brasileira.
+      Enfatizando a importância do protagonismo local na cena da música eletrônica."
+    />
   </head>
   <body>
     <div id="root"></div>
