--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>COICE - Exploring percussive sounds</title>
     <meta
       name="description"
-      content="Focada em sons percussivos, valorizando a sonoridade da América Latina e brasileira.
+      content="Label focada em sons percussivos, valorizando a sonoridade da América Latina e brasileira.
       Enfatizando a importância do protagonismo local na cena da música eletrônica."
     />
   </head>
